# rvv-testcases

./: .gitignore  README.md
.github/workflows/: rust.yml
cases/: Cargo.toml  Makefile  joii-run.sh  run_with_seed.sh
cases/src/: adc_sbc_cases.rs  count_population_in_mask_cases.rs  integer_extension_cases.rs  integer_merge_cases.rs  integer_move_cases.rs  integer_scalar_move_cases.rs  intrinsic.rs  intrinsic_setvl.rs  lib.rs  load_store_cases.rs  main.rs  mask_register_logical_cases.rs  misc.rs  misc_cases.rs  narrowing_fixed_point_clip_cases.rs  narrowing_integer_right_shift_cases.rs  rng.rs  rng_data.rs  runner.rs  set_before_first_cases.rs  set_including_first_cases.rs  set_only_first_cases.rs  single_saturating_add_subtract_cases.rs  single_width_averaging_cases.rs  single_width_integer_multiply_add_cases.rs  single_width_integer_reduction_cases.rs  single_width_scaling_shift.rs  single_width_shift_cases.rs  vector_compress_cases.rs  vector_element_index_cases.rs  vector_iota_cases.rs  vector_register_gather_cases.rs  vector_slide_cases.rs  vmsleu_vv_cases.rs  vmsop_vi_cases.rs  vmsop_vv_cases.rs  vmsop_vx_cases.rs  vop_vi_cases.rs  vop_vv_cases.rs  vop_vx_cases.rs  (+7 more)
ckb-vm-signal-profiler/: Cargo.toml  Makefile
ckb-vm-signal-profiler/src/: main.rs
tools/: README.md  comparing_missing_instruction.py  generate_expand_bit.py  generate_vi.py  generate_vsetvl.py
tools/gen_rand/: Cargo.toml
tools/gen_rand/src/: main.rs
