[package]
name = "rvv-testcases"
version = "0.1.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this configuration is very important to CKB-VM
[profile.release]
lto = "fat"

[dependencies]
ckb-std = "0.9.0"
rvv-asm = "0.1.2"
# uint = "0.9.1"

[[bin]]
path = "src/main.rs"
name = "rvv-testcases"
