[package]
name = "rvv-testcases"
version = "0.1.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this configuration is very important to CKB-VM
[profile.release]
lto = "fat"

[dependencies]
ckb-std = "0.9.0"
rvv-asm = "0.1.3"
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }


[[bin]]
path = "src/main.rs"
name = "rvv-testcases"
