[package]
name = "ckb-vm-signal-profiler"
version = "0.1.0"
edition = "2018"
description = "Linux signal based profiler for ckb-vm, note this is profiling ckb-vm itself, not the programs running in ckb-vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protoc-rust = "2.0"

[dependencies]
addr2line = "0.17.0"
ckb-vm = { git="https://github.com/nervosnetwork/ckb-vm.git", rev="5122610", features = ["asm"] }
log = "0.4.16"
env_logger = "0.9.0"
nix = "0.23.1"
lazy_static = "1.4.0"
protobuf = { version = "2.25.1", features = ["with-bytes", "with-serde"] }
ckb-vm-signal-profiler = { git = "https://github.com/XuJiandong/ckb-vm-signal-profiler.git", rev="b7e4652" }

[patch.crates-io]
ckb-vm = { git="https://github.com/nervosnetwork/ckb-vm.git", rev="5122610", features = ["asm"] }
